--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
+    "angular": "^1.6.5",
     "angular-resource": "^1.6.5",
+    "bootstrap": "^3.3.7",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "fs": "0.0.1-security",
     "helmet": "^1.3.0",
+    "jquery": "^3.2.1",
     "loopback": "^2.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-cli": "^3.0.0",
