--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "angular": "^1.6.5",
     "angular-resource": "^1.6.5",
+    "angular-ui-router": "^1.0.3",
     "bootstrap": "^3.3.7",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
